force-app/main/default/objects/Quote/fields/DX_API__c.field-meta.xml
<CustomField>
    <fullName>DX_API__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Annual Percentage Increase of service order monthly recurring charges.</description>
    <label>API</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>