force-app/main/default/objects/Quote/fields/DX_MRI_ID__c.field-meta.xml
<CustomField>
    <fullName>DX_MRI_ID__c</fullName>
    <label>MRI ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>