force-app/main/default/objects/Quote/fields/DX_MRI_Occupant_Name__c.field-meta.xml
<CustomField>
    <fullName>DX_MRI_Occupant_Name__c</fullName>
    <label>MRI Occupant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>